Changed "sabbath day" to "fasting day", "discussion hall" to "meeting hall", etc.

--- a/01_agama/dirgha/DA_14.md
+++ b/01_agama/dirgha/DA_14.md
@@ -27,7 +27,7 @@ next: DA_15.html
 5\. Pañcaśikha replied, “Very well.” Then Pañcaśikha took his cymophane lute and strummed it at the front of that assembly of Trāyastriṃśa gods as an offering.
 {:#p5}
 
-6\. Śakra the Lord of Gods, the Trāyastriṃśa gods, and Pañcaśikha then suddenly disappeared from up in the Dharma Meeting Hall. In the time it takes a strong man to flex his arm, they arrived on Mount Vaidehaka in the north of Magadha.
+6\. Śakra the Lord of Gods, the Trāyastriṃśa gods, and Pañcaśikha then suddenly disappeared from up in the Dharma [Meeting] Hall. In the time it takes a strong man to flex his arm, they arrived on Mount Vaidehaka in the north of Magadha.
 {:#p6}
 
 7\. At the time, the Bhagavān had entered the samādhi of blazing fire, and Mount Vaidehaka looked like one giant flame. The people in the countryside saw its appearance and said, “Mount Vaidehaka looks like one giant flame. Is this due to the power of gods that are arriving?”
@@ -137,7 +137,7 @@ The Buddha told Lord Śakra, “Your host of gods is large, but they can sit nea
 20\. The Buddha said, “I do remember it. That goddess immediately put the question to me with her goddess’s voice, and I roused from samādhi. It was like the sound of a woman’s chariot.”
 {:#p20}
 
-21\. Lord Śakra said to the Buddha, “In the past, I held a meeting for some reason with the Trāyastriṃśa gods in the Dharma Meeting Hall. Those gods back then had said, ‘If a Tathāgata arises in the world, the host of gods will increase and the host of asuras will diminish!’ Now that I see the Bhagavān in person, I personally see and know it myself. I’ve realized it myself: ‘The Tathāgata, the Arhat, has arisen in the world, and the host of gods are increasing, and the host of asuras are diminishing!’
+21\. Lord Śakra said to the Buddha, “In the past, I held a meeting for some reason with the Trāyastriṃśa gods in the Dharma [Meeting] Hall. Those gods back then had said, ‘If a Tathāgata arises in the world, the host of gods will increase and the host of asuras will diminish!’ Now that I see the Bhagavān in person, I personally see and know it myself. I’ve realized it myself: ‘The Tathāgata, the Arhat, has arisen in the world, and the host of gods are increasing, and the host of asuras are diminishing!’
 {:#p21}
 
 22\. “Here, there was the Śākyan woman Gopikā who had purely cultivated the Bhagavān’s religious life. She was born in the Trāyastriṃśa Heaven’s palace as my son after her body broke up and her life ended. The Trāyastriṃśa gods all praised him, ‘The great godling Gopaka has great virtue and majesty!’
@@ -504,7 +504,7 @@ Asked the Tathāgata about his meaning.”
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 9 June 2022
+Last Revised: 19 June 2022
 {: .revised}
 
 ---
