--- a/01_agama/dirgha/DA_15.md
+++ b/01_agama/dirgha/DA_15.md
@@ -24,7 +24,7 @@ next: DA_16.html
 4\. The wanderer sat to one side and said to the Bhagavān, “Last night, the Licchavi monk Sunakṣatra visited me.[\[3\]](#n3){:#ref3} He said, ‘Great teacher, I’m not practicing the religious life under the Buddha. Why is that? The Buddha is estranged from me.’ That man openly spoke of you as mistaken, though I didn’t accept it on his word.”
 {:#p4}
 
-5\. The Buddha told the wanderer, “I knew you wouldn’t accept what Sunakṣatra says. Once when I was staying near Monkey Lake of Vaiśālī, there was a meeting in the Dharma Hall. This Sunakṣatra came to me and said, ‘The Tathāgata is estranged from me. I won’t practice the religious life under Gautama.’
+5\. The Buddha told the wanderer, “I knew you wouldn’t accept what Sunakṣatra says. Once when I was staying near Monkey Lake of Vaiśālī, there was a meeting in the Dharma hall. This Sunakṣatra came to me and said, ‘The Tathāgata is estranged from me. I won’t practice the religious life under Gautama.’
 {:#p5}
 
 6\. “I asked him, ‘Why do you say, “I won’t practice the religious life under the Tathāgata because the he is estranged from me”?’
@@ -192,7 +192,7 @@ next: DA_16.html
 
 ### Sunakṣatra and the Wanderer Pāṭiputra
 
-45\. The Buddha told the wanderer, “I was once in the Dharma Meeting Hall that’s beside Monkey Lake. At the time, a wanderer named Pāṭiputra had stopped there. He was respected by people, his fame was far-reaching, and he received many offerings. In a large crowd of Vaiśālīs, he made this statement: ‘The ascetic Gautama says he is wise. I am wise, too. The ascetic Gautama says he has miraculous abilities. I have miraculous abilities, too. The ascetic Gautama has achieved the transcendental path. I have achieved the transcendental path, too. He and I will demonstrate miraculous abilities together. The ascetic will demonstrate one ability, and then I will demonstrate two. When the ascetic demonstrates two, I will demonstrate four. When the ascetic demonstrates eight, I will demonstrate 16. When the ascetic demonstrates 16, I will demonstrate 32. When the ascetic demonstrates 32, I will demonstrate 64. However many that that ascetic demonstrates, I will demonstrate twice as many.’
+45\. The Buddha told the wanderer, “I was once in the Dharma meeting hall that’s beside Monkey Lake. At the time, a wanderer named Pāṭiputra had stopped there. He was respected by people, his fame was far-reaching, and he received many offerings. In a large crowd of Vaiśālīs, he made this statement: ‘The ascetic Gautama says he is wise. I am wise, too. The ascetic Gautama says he has miraculous abilities. I have miraculous abilities, too. The ascetic Gautama has achieved the transcendental path. I have achieved the transcendental path, too. He and I will demonstrate miraculous abilities together. The ascetic will demonstrate one ability, and then I will demonstrate two. When the ascetic demonstrates two, I will demonstrate four. When the ascetic demonstrates eight, I will demonstrate 16. When the ascetic demonstrates 16, I will demonstrate 32. When the ascetic demonstrates 32, I will demonstrate 64. However many that that ascetic demonstrates, I will demonstrate twice as many.’
 {:#p45}
 
 46\. “Wanderer, when the monk Sunakṣatra put on his robe and took his bowl into the city to solicit alms, he saw the wanderer Pāṭiputra in that large crowd making this statement, ‘The ascetic Gautama says he is wise. I am wise, too. The ascetic Gautama says he has miraculous abilities. I have miraculous abilities, too. The ascetic Gautama has achieved the transcendental path. I have achieved the transcendental path, too. He and I will demonstrate miraculous abilities together. The ascetic will demonstrate one ability, and then I will demonstrate two … When the ascetic demonstrates four, I will demonstrate eight … However many that that ascetic demonstrates, I will demonstrate twice as many.’
@@ -413,7 +413,7 @@ It could only bark like a jackal.’
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 9 June 2022
+Last Revised: 19 June 2022
 {: .revised}
 
 ---
