--- a/01_agama/dirgha/DA_20.md
+++ b/01_agama/dirgha/DA_20.md
@@ -260,7 +260,7 @@ He replied, “Very well. I’d be glad to hear it.”
 64\. “Student, take the example of other ascetics and priests who eat another’s faithful alms but only pursue countless ways of wrong livelihood. They flatter others with pretty expressions or appear to criticize them in order to pursue benefits. No one who enters my teaching does such things.
 {:#p64}
 
-65\. “Student, take the example of other ascetics and priests who eat another’s faithful alms but only debate with each other. They might visit parks or go to lakes and discussion halls and refute each other. They say, ‘I know the teachings and discipline; you know nothing.’ ‘I’ve arrived at the correct path; you are going down the wrong road.’ ‘You put what’s first last or put what’s last first.’ ‘I’m tolerant of you, but you don’t tolerate me.’ ‘The words that you say aren’t true or correct.’ ‘If you have any doubts, you should come and ask me, and I’ll answer it completely.’ No one who enters my teaching does such things.
+65\. “Student, take the example of other ascetics and priests who eat another’s faithful alms but only debate with each other. They might visit parks or go to lakes and meeting halls and refute each other. They say, ‘I know the teachings and discipline; you know nothing.’ ‘I’ve arrived at the correct path; you are going down the wrong road.’ ‘You put what’s first last or put what’s last first.’ ‘I’m tolerant of you, but you don’t tolerate me.’ ‘The words that you say aren’t true or correct.’ ‘If you have any doubts, you should come and ask me, and I’ll answer it completely.’ No one who enters my teaching does such things.
 {:#p65}
 
 66\. “Student, take the example of other ascetics and priests who eat another’s faithful alms and still pursue their livelihoods on other ways. They serve as messengers for kings, royal officials, priests, or householders, traveling from here to there and there to here. They take messages from here and deliver them there and take messages from there and deliver them here. They might do this personally or instruct others to do it. No one who enters my teaching does such things.
@@ -504,7 +504,7 @@ He answered, “No.”
 140\. The Buddha told the student, “Your own pettiness makes you unaware of what’s true or false, yet you slander and belittle the Śākyans while your own lineage is rooted in misdeeds that grow the source of Hell.
 {:#p140}
 
-141\. “Furthermore, student, [someone] can’t perfect the unsurpassed insight and conduct, but they don’t eat herbs and grass, fallen fruit, or grass and leaves. Instead, they build a large meeting hall in a town or city, and people come from the east, west, south, and north to offer the donations that they can. Doing so, they can’t perfect the unsurpassed insight and conduct. Instead, they practice this fourth method. How is it, student? Do you or your teacher practice this method?”
+141\. “Furthermore, student, [someone] can’t perfect the unsurpassed insight and conduct, but they don’t eat herbs and grass, fallen fruit, or grass and leaves. Instead, they build a large raised hall in a town or city, and people come from the east, west, south, and north to offer the donations that they can. Doing so, they can’t perfect the unsurpassed insight and conduct. Instead, they practice this fourth method. How is it, student? Do you or your teacher practice this method?”
 {:#p141}
 
 He answered, “No.”
@@ -514,7 +514,7 @@ He answered, “No.”
 
 #### The Ancient Priests
 
-143\. “How is it, student? The priests and sages of antiquity had many arts. They praised and commended the hymns of the past. Present-day priests recite and commend them as 1. Aṣṭaka, 2. Vāmaka, 3. Vāmadeva, 4. Viśvāmitra, 5. Aṅgiras, 6. [Yamataggi], 7. Vasiṣṭha, 8. Kāśyapa, 9. Aruṇa, 10. Gautama, 11. [Suyiva], and 12. Sundara.[\[19\]](#n19){:#ref19} Such great sages and priests dug moats and erected meeting halls. Do you and your teacher’s followers today live like they did?”
+143\. “How is it, student? The priests and sages of antiquity had many arts. They praised and commended the hymns of the past. Present-day priests recite and commend them as 1. Aṣṭaka, 2. Vāmaka, 3. Vāmadeva, 4. Viśvāmitra, 5. Aṅgiras, 6. [Yamataggi], 7. Vasiṣṭha, 8. Kāśyapa, 9. Aruṇa, 10. Gautama, 11. [Suyiva], and 12. Sundara.[\[19\]](#n19){:#ref19} Such great sages and priests dug moats and erected raised halls. Do you and your teacher’s followers today live like they did?”
 {:#p143}
 
 He answered, “No.”
@@ -703,7 +703,7 @@ Citron grove. In Pali, the grove is named after the town, but in Chinese it’s 
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 9 June 2022
+Last Revised: 19 June 2022
 {: .revised}
 
 ---
