--- a/01_agama/dirgha/DA_21.md
+++ b/01_agama/dirgha/DA_21.md
@@ -74,7 +74,7 @@ next: DA_22.html
 20\. “‘There are other ascetics and priests who eat the faithful alms of others and just pursue wrong livelihoods. They flatter people with beautiful expressions or appear to criticize them, and they pursue profit with profit. The ascetic Gautama doesn’t do such things.’
 {:#p20}
 
-21\. “‘There are other ascetics and priests who eat the faithful alms of others and just argue with each other. Whether in parks, near ponds, or in meeting halls, they blame each other: ‘I know the sūtras and discipline; you know nothing.’ ‘I’m on the correct path; you’re going down the wrong road.’ ‘Either you put what’s first last, or you put what’s last first.’ ‘I can endure [this]; you aren’t able to endure it.’ ‘Your words aren’t correct.’ ‘If you have any doubts, you should come and ask me; I can answer everything.’ The ascetic Gautama doesn’t do such things.’
+21\. “‘There are other ascetics and priests who eat the faithful alms of others and just argue with each other. Whether in parks, near ponds, or in halls, they blame each other: ‘I know the sūtras and discipline; you know nothing.’ ‘I’m on the correct path; you’re going down the wrong road.’ ‘Either you put what’s first last, or you put what’s last first.’ ‘I can endure [this]; you aren’t able to endure it.’ ‘Your words aren’t correct.’ ‘If you have any doubts, you should come and ask me; I can answer everything.’ The ascetic Gautama doesn’t do such things.’
 {:#p21}
 
 22\. “‘There are other ascetics and priests who eat the faithful alms of others and pursue a messenger’s livelihood. Whether it’s for kings, the king’s ministers, priests, or gentlemen, they relay their messages. They travel from here to there and there to here. They take a message here and deliver it there or take a message there and deliver it here. They might do this themselves or instruct others to do it. The ascetic Gautama doesn’t do such things.’
@@ -526,7 +526,7 @@ next: DA_22.html
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 9 June 2022
+Last Revised: 19 June 2022
 {: .revised}
 
 ---
