--- a/01_agama/dirgha/DA_30-1.md
+++ b/01_agama/dirgha/DA_30-1.md
@@ -14,16 +14,16 @@ next: DA_30-2.html
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying in the Karīrika Hut in Anāthapiṇḍada’s Park at Jeta’s Grove of Śrāvastī. He was accompanied by a large assembly of 1,250 monks.
 {:#p1}
 
-2\. After their meal, a group of monks gathered up in the discussion hall. They had this discussion: “Gentlemen, it’s amazing! What causes the destruction of heaven and earth? What causes their formation? What are the countries where sentient beings live?”
+2\. After their meal, a group of monks gathered up in the meeting hall. They had this discussion: “Gentlemen, it’s amazing! What causes the destruction of heaven and earth? What causes their formation? What are the countries where sentient beings live?”
 {:#p2}
 
-3\. The Bhagavān was in a quiet place at the time and overheard them clearly with his heavenly ear. He heard those monks saying this, having gathering up in the discussion hall after their meal. The Bhagavān then emerged from his quiet hut, went to the discussion hall, and sat down. Knowing it, he purposefully questioned them. He asked the monks, “You were having a discussion earlier. What was it that you were discussing?”
+3\. The Bhagavān was in a quiet place at the time and overheard them clearly with his heavenly ear. He heard those monks saying this, having gathering up in the meeting hall after their meal. The Bhagavān then emerged from his quiet hut, went to the meeting hall, and sat down. Knowing it, he purposefully questioned them. He asked the monks, “You were having a discussion earlier. What was it that you were discussing?”
 {:#p3}
 
-4\. The monks said to the Buddha, “We gathered here in the discussion hall after our meal and discussed this: ‘Gentlemen, it’s amazing! What causes the destruction of heaven and earth? What causes their formation? What countries do sentient beings live in?’ This was what we were discussing after gathering here in the hall.”
+4\. The monks said to the Buddha, “We gathered here in the meeting hall after our meal and discussed this: ‘Gentlemen, it’s amazing! What causes the destruction of heaven and earth? What causes their formation? What countries do sentient beings live in?’ This was what we were discussing after gathering here in the hall.”
 {:#p4}
 
-5\. The Buddha told the monks, “Good, good! Everyone who’s left home should practice two things: The first is the noble silence, and the second is [the noble] discussion of the Dharma. When all of you gather in a discussion hall, you should practice noble silence or [noble] discussion of the Dharma. Monks, would you like to hear the Tathāgata describe the formation and destruction of heaven and earth and the cities and countries where sentient beings live?”
+5\. The Buddha told the monks, “Good, good! Everyone who’s left home should practice two things: The first is the noble silence, and the second is [the noble] discussion of the Dharma. When all of you gather in a meeting hall, you should practice noble silence or [noble] discussion of the Dharma. Monks, would you like to hear the Tathāgata describe the formation and destruction of heaven and earth and the cities and countries where sentient beings live?”
 The monks said to the Buddha, “Indeed, Bhagavān, now would be a good time! We’d be glad to hear it. Once the Bhagavān has explained this, we’ll remember it!”
 {:#p5}
 
@@ -385,6 +385,6 @@ I’ve left *yojana* untranslated so that the reader can see the original number
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 9 June 2022
+Last Revised: 19 June 2022
 {: .revised}
 ---
