--- a/01_agama/ekottarika/43/EA_43_07.md
+++ b/01_agama/ekottarika/43/EA_43_07.md
@@ -142,10 +142,10 @@ Jīvaka said to the king, “There really was no reason. May the great king make
 21\. Jīvaka replied, “The Tathāgata’s disciples are always in concentration and don’t have any distracted thoughts. May the great king please continue and take this small step forward.”
 {: #p21}
 
-22\. King Ajātaśatru then got down from his chariot and walked to the entrance in front of the discussion hall. He stood silently, examining the noble assembly. He then looked back at Jīvaka and said, “Where is the Tathāgata now?”
+22\. King Ajātaśatru then got down from his chariot and walked to the entrance in front of the meeting hall. He stood silently, examining the noble assembly. He then looked back at Jīvaka and said, “Where is the Tathāgata now?”
 {: #p22}
 
-23\. At that point, the entire noble assembly had entered a concentration of radiance that illuminated the discussion hall. There was nowhere it didn’t reach.
+23\. At that point, the entire noble assembly had entered a concentration of radiance that illuminated the meeting hall. There was nowhere it didn’t reach.
 {: #p23}
 
 24\. Jīvaka then immediately knelt with his hands together and his fingers crossed, pointing to the Tathāgata. “This is the Tathāgata at the center, shining like the sun when the clouds part!”
