--- a/01_agama/madhyama/MA_074.md
+++ b/01_agama/madhyama/MA_074.md
@@ -59,16 +59,16 @@ next: MA_075.html
 14\. It was then that the Bhagavān taught Dharma for Venerable Aniruddha, encouraging, rousing, and making him rejoice. He taught the Dharma for him with measureless methods. Having encouraged, roused, and made him rejoice, he entered that form of samādhi. With that form of samādhi, the Bhagavān thus disappeared from the Waterside Grove in Cedi and appeared standing at Mṛgadāva Park in Bharga in the time it takes for a strong man to flex his arm.
 {: #p14}
 
-15\. At that moment, Venerable Ānanda was holding a fan and attending the Buddha. Thereupon, the Bhagavān woke from samādhi, turned to him, and said, “Ānanda, if there are monks traveling to Mṛgadāva Park in Bharga, send them all to assemble at the discussion hall. After they’ve assembled at the discussion hall, come back and tell me.”
+15\. At that moment, Venerable Ānanda was holding a fan and attending the Buddha. Thereupon, the Bhagavān woke from samādhi, turned to him, and said, “Ānanda, if there are monks traveling to Mṛgadāva Park in Bharga, send them all to assemble at the meeting hall. After they’ve assembled at the meeting hall, come back and tell me.”
 {: #p15}
 
-16\. Accepting the Bhagavān’s instruction, Venerable Ānanda bowed his head at his feet as homage and then went to announce the order: “Any monks traveling to Mṛgadāva Park in Bharga are all to assemble at the discussion hall.”
+16\. Accepting the Bhagavān’s instruction, Venerable Ānanda bowed his head at his feet as homage and then went to announce the order: “Any monks traveling to Mṛgadāva Park in Bharga are all to assemble at the meeting hall.”
 {: #p16}
 
-17\. Once they had assembled at the discussion hall, he came back to the Buddha, bowed his head at his feet, and withdrew to sit to one side. He said, “Bhagavān, any monks who’ve traveled to Mṛgadāva Park in Bharga all have been sent to assembly at the discussion hall. May the Bhagavān know the time is right.”
+17\. Once they had assembled at the meeting hall, he came back to the Buddha, bowed his head at his feet, and withdrew to sit to one side. He said, “Bhagavān, any monks who’ve traveled to Mṛgadāva Park in Bharga all have been sent to assembly at the meeting hall. May the Bhagavān know the time is right.”
 {: #p17}
 
-18\. Thereupon, the Bhagavān led Venerable Ānanda to the discussion hall. He prepared a seat in front of the assembled monks and sat down. After sitting, he addressed them, “Monks, now I will explain the eight thoughts of a great man for you. All of you, listen closely, and well consider it.” The monks then accepted the teaching and listened.
+18\. Thereupon, the Bhagavān led Venerable Ānanda to the meeting hall. He prepared a seat in front of the assembled monks and sat down. After sitting, he addressed them, “Monks, now I will explain the eight thoughts of a great man for you. All of you, listen closely, and well consider it.” The monks then accepted the teaching and listened.
 {: #p18}
 
 19\. The Buddha said, “The eight thoughts of a great man are these: The path comes from having no desires; it’s not attained by having desires. The path comes from knowing what’s enough; it’s not obtained by lacking satisfaction. The path comes from seclusion; it’s not obtained by enjoying company, living with company, or joining with company. The path comes from diligence; it’s not obtained by indolence. The path comes from right mindfulness; it’s not obtained by wrong mindfulness. The path comes from a concentrated mind; it’s not obtained by a distracted mind. The path comes from wisdom; it’s not obtained by foolishness. The path comes from non-frivolity, enjoying non-frivolity, and practicing non-frivolity; it’s not obtained by frivolity, enjoying frivolity, or practicing frivolity.
@@ -140,7 +140,7 @@ next: MA_075.html
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 9 June 2022
+Last Revised: 19 June 2022
 {: .revised}
 
 ---
