--- a/01_agama/madhyama/MA_081.md
+++ b/01_agama/madhyama/MA_081.md
@@ -19,16 +19,16 @@ next: MA_082.html
 2\. After the night passed and the sun rose, the Bhagavān put on his robe and took his bowl into Āpaṇa to solicit alms. When his meal was finished, he put away his robe and bowl, washed his hands and feet, put his sitting mat over his shoulder, and went into a grove in the afternoon. Going into that grove, he spread out his sitting mat under a tree and sat cross-legged there.
 {: #p2}
 
-3\. At the time, a large group of monks had gathered in the discussion hall after the midday meal, and they were conversing about this topic: “Good men, the Bhagavān is rare and extraordinary. He cultivates mindfulness of body and discerns and disseminates it. His is the highest knowledge, highest observation, highest cultivation, and highest discipline. He has well perfected good conduct and resides in a unified mind. The Buddha teaches that mindfulness of body has great rewards. One attains the vision and eyes to see the supreme truth.”
+3\. At the time, a large group of monks had gathered in the meeting hall after the midday meal, and they were conversing about this topic: “Good men, the Bhagavān is rare and extraordinary. He cultivates mindfulness of body and discerns and disseminates it. His is the highest knowledge, highest observation, highest cultivation, and highest discipline. He has well perfected good conduct and resides in a unified mind. The Buddha teaches that mindfulness of body has great rewards. One attains the vision and eyes to see the supreme truth.”
 {: #p3}
 
-4\. Just then, the Bhagavān was sitting in repose and used the divine ear that transcends that of humans. He heard the monks gathered in the discussion hall after the midday meal conversing about this topic: “Good men, the Bhagavān is rare and extraordinary. He cultivates mindfulness of body and discerns and disseminates it. His is the highest knowledge, highest observation, highest cultivation, and highest discipline. He has well perfected good conduct and resides in a unified mind. The Buddha teaches that mindfulness of body has great rewards. One attains the vision and eyes to see the supreme truth.” After hearing this, the Bhagavān then got up from his repose in the afternoon, went to the discussion hall, prepared his seat in front of the monks, and sat down.
+4\. Just then, the Bhagavān was sitting in repose and used the divine ear that transcends that of humans. He heard the monks gathered in the meeting hall after the midday meal conversing about this topic: “Good men, the Bhagavān is rare and extraordinary. He cultivates mindfulness of body and discerns and disseminates it. His is the highest knowledge, highest observation, highest cultivation, and highest discipline. He has well perfected good conduct and resides in a unified mind. The Buddha teaches that mindfulness of body has great rewards. One attains the vision and eyes to see the supreme truth.” After hearing this, the Bhagavān then got up from his repose in the afternoon, went to the meeting hall, prepared his seat in front of the monks, and sat down.
 {: #p4}
 
-5\. It was then that the Bhagavān addressed the monks, “What topic have you been discussing together? What was the reason you gathered here in the discussion hall?”
+5\. It was then that the Bhagavān addressed the monks, “What topic have you been discussing together? What was the reason you gathered here in the meeting hall?”
 {: #p5}
 
-The monks said, “Bhagavān, we monks gathered here in the discussion hall after the midday meal to discuss this topic: ‘Good men, the Bhagavān is rare and extraordinary. He cultivates mindfulness of body and discerns and disseminates it. His is the highest knowledge, highest observation, highest cultivation, and highest discipline. He has well perfected good conduct and resides in a unified mind. The Buddha teaches that mindfulness of body has great rewards. One attains the vision and eyes to see the supreme truth.’ Bhagavān, we’ve been discussing this topic together. This was the reason we gathered here in the discussion hall.”
+The monks said, “Bhagavān, we monks gathered here in the meeting hall after the midday meal to discuss this topic: ‘Good men, the Bhagavān is rare and extraordinary. He cultivates mindfulness of body and discerns and disseminates it. His is the highest knowledge, highest observation, highest cultivation, and highest discipline. He has well perfected good conduct and resides in a unified mind. The Buddha teaches that mindfulness of body has great rewards. One attains the vision and eyes to see the supreme truth.’ Bhagavān, we’ve been discussing this topic together. This was the reason we gathered here in the meeting hall.”
 
 6\. The Bhagavān again addressed the monks, “How do I teach the cultivation of mindfulness of body, discerning and disseminating it? What great rewards does it attain?”
 {: #p6}
@@ -244,7 +244,7 @@ The monks answered, “No, Bhagavān. Why is that? By rubbing a wet stick into w
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 9 June 2022
+Last Revised: 19 June 2022
 {: .revised}
 
 ---
