--- a/01_agama/samyukta/19/SA19_15.md
+++ b/01_agama/samyukta/19/SA19_15.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 19. Indra | 15. The Sabbath Days'
+title: 'The Related Discourses | 19. Indra | 15. The Fasting Days'
 type: kramdown
 base: ../../../
 previous: index.html
@@ -9,12 +9,12 @@ next: ../25/index.html
 
 # [The Related Discourses](../index.html)
 ## [19. Indra](index.html)
-### 15. The Sabbath Days
+### 15. The Fasting Days
 
 1\. Thus have I heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. It was then that the Bhagavān addressed the monks, “On the eighth day of the month, the four god kings order a great minister to assess the world: ‘Are there people who support their parents, ascetics, priests, and relatives? Do they honor them, make merits, see the evils of the present world, and fear consequences in the afterlife? Do they practice generosity to make merit and observe the sabbath precepts? On the eight, fourteenth, and fifteenth days of the month and miracle months, do they accept the precepts at the poṣadha?’
+2\. It was then that the Bhagavān addressed the monks, “On the eighth day of the month, the four god kings order a great minister to assess the world: ‘Are there people who support their parents, ascetics, priests, and relatives? Do they honor them, make merits, see the evils of the present world, and fear consequences in the afterlife? Do they practice generosity to make merit and observe the fasting rules? On the eight, fourteenth, and fifteenth days of the month and miracle months, do they accept the precepts at the poṣadha?’
 {:#p2}
 
 3\. “On the fourteenth day, they send down a prince who surveys the world: ‘Are there people who support their parents … accept the precepts at the poṣadha?’
@@ -41,7 +41,7 @@ next: ../25/index.html
 * {:.verse}“‘Suppose on the eighth, fourteenth,\\
 and fifteenth days of the month\\
 And during the miracle months\\
-People observe the eight-precept sabbath.\\
+People observe the eight-rule fast.\\
 Just like my cultivation,\\
 Their cultivation is likewise!’
 
@@ -51,7 +51,7 @@ Their cultivation is likewise!’
 * {:.verse}“‘Suppose on the eighth, fourteenth,\\
 and fifteenth days of the month\\
 And during the miracle months\\
-People observe the eight-precept sabbath.\\
+People observe the eight-rule fast.\\
 Just like my cultivation,\\
 Their cultivation is likewise!’
 
@@ -63,7 +63,7 @@ Their cultivation is likewise!’
 * {:.verse}“‘Suppose on the eighth, fourteenth,\\
 and fifteenth days of the month\\
 And during the miracle months\\
-People observe the eight-precept sabbath.\\
+People observe the eight-rule fast.\\
 Just like my cultivation,\\
 Their cultivation is likewise!’
 
